Working version
----------------

(Changes that can break existing programs are marked with a "*")

### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

- #13728: Add Sys.runtime_executable containing the full path (if available) to
  the currently executing runtime.
  (David Allsopp, review by Nicolás Ojeda Bär and Daniel Bünzli)

- #13916: Add Option.product and Option.Syntax.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer and David
  Allsopp)

### Other libraries:

- #14020: Add Unix.unsetenv.
  (Nicolás Ojeda Bär, review by Antonin Décimo and David Allsopp)

### Tools:

* #13638: ocamlmklib exits with code 4 if passed an unrecognised option, as it
  does with an unrecognised file.
  (David Allsopp, review by Antonin Décimo and Sébastien Hinderer)

- #13987: Remove a spurious TSan report in case of benign data race between
  major GC read and write from the mutator (fixes #13427)
  (Olivier Nicole, report by Thomas Leonard, review by Gabriel Scherer)

- #13966: Enable "generalized polymorphic #install_printer"
  in the debugger
  (Pierre Boutillier and Gabriel Scherer, review by Florian Angeletti)

### Manual and documentation:

* #13975: documented the `[@remove_aliases]` built-in attribute for signatures
  (introduced by #1652 in 2018). Small refactor of the code that fetches the
  attribute.
  (Clement Blaudeau, review by Gabriel Scherer)

- #14002: Add anchors to items and headings of the web version of the API
  documentation for easier linking.
  (Nicolás Ojeda Bär, report by Louis Roché, review by Gabriel Scherer and
  Florian Angeletti)

- #14023: Add documentation for the [row_more] function.
  (Richard Eisenberg, review by Jacques Garrigue)

### Compiler user-interface and warnings:

- #12628: Improved error message for unsafe values: print out the full path for
  the value that is unsafe when they are detected during the compilation of
  recursive modules.