@@ -1,0 +1,20 @@
+          Allocation: 5000 bytes
+                 sub: 5000 bytes
+               slice: 5000 bytes
+                  gc: 0 bytes
+       Unix.map_file: 65536 bytes
+                 sub: 65536 bytes
+               slice: 65536 bytes
+                  gc: 0 bytes
+    CAML_BA_EXTERNAL: 0 bytes
+                 sub: 0 bytes
+               slice: 0 bytes
+                  gc: 0 bytes
+       ba_alloc NULL: 5000 bytes
+                 sub: 5000 bytes
+               slice: 5000 bytes
+                  gc: 0 bytes
+     CAML_BA_MANAGED: 5000 bytes
+                 sub: 5000 bytes
+               slice: 5000 bytes
+                  gc: 0 bytes
